# ProjetoEngDeDados

./: .gitignore  404.html  README.md  apache_iceberg.ipynb  delta_lake.ipynb  index.html  mkdocs.yml  pyproject.toml
apache_iceberg/: apache_iceberg.ipynb
delta/: index.html
delta_lake/: delta_lake.ipynb
docs/: delta.md  iceberg.md  index.md  spark.md
iceberg/: index.html
search/: search_index.json
spark/: index.html
warehouse-apache-iceberg/db/categorias/metadata/: .v1.metadata.json.crc  v1.metadata.json
warehouse_delta_lake/categorias/_delta_log/: .00000000000000000000.json.crc
warehouse_delta_lake/clientes/_delta_log/: .00000000000000000000.json.crc
warehouse_delta_lake/itens_venda/_delta_log/: .00000000000000000000.json.crc
warehouse_delta_lake/produtos/: .part-00000-5f2ad96f-a30e-4797-a7f2-b926bc7af9da-c000.snappy.parquet.crc  .part-00000-e2a49a4d-b033-4859-a7fb-bd368ac47b9e-c000.snappy.parquet.crc  .part-00001-63e07a45-bfaa-43b7-970e-fffa823378b0-c000.snappy.parquet.crc  .part-00002-d90272da-9efc-4883-ad30-bfb1fbe46afd-c000.snappy.parquet.crc  part-00000-5f2ad96f-a30e-4797-a7f2-b926bc7af9da-c000.snappy.parquet  part-00000-e2a49a4d-b033-4859-a7fb-bd368ac47b9e-c000.snappy.parquet  part-00001-63e07a45-bfaa-43b7-970e-fffa823378b0-c000.snappy.parquet  part-00002-d90272da-9efc-4883-ad30-bfb1fbe46afd-c000.snappy.parquet
warehouse_delta_lake/produtos/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc
warehouse_delta_lake/vendas/_delta_log/: .00000000000000000000.json.crc
(+38 files in other folders)
