[project]
name = "trabalho-arquitetura-dados"
version = "0.1.0"
description = "Plataforma de Dados E-commerce (Delta x Iceberg)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.0,<3.6.0",
    "delta-spark>=3.1.0,<3.3.0",
    "jupyter>=1.0.0",
    "mkdocs<2.0",
    "mkdocs-material>=9.0.0",
]

[tool.uv]
package = false